<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_groupe_olivier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="10dp"
            android:text="@string/main_lbl_serverInfos"
            android:textColor="@color/noirOlivier" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_lbl_serverIp"
                android:textColor="@color/noirOlivier" />

            <EditText
                android:id="@+id/main_txt_serverIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"
                android:maxLines="1"
                android:enabled="false"
                android:text="@string/main_txt_serverIp"
                android:textColor="@color/noirOlivier"
                android:backgroundTint="@color/noirOlivier" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/main_check_allowModification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_check_allowModification"
            android:textColor="@color/noirOlivier"
            android:buttonTint="@color/bleuOlivier"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/main_bt_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="75dp"
            android:text="@string/main_bt_connect"
            android:textColor="@color/white"
            android:backgroundTint="@color/bleuOlivier" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>